<resources>
    <array name="priorities">
        <item>Red</item>
        <item>Yellow</item>
        <item>Green</item>
    </array>
    <string name="app_name">Student Assistant</string>
    <string name="dev_team"><![CDATA[< Developers Team />]]></string>
    <string name="title_activity_settings">Settings</string>
    <string name="hint_et_Service">Service</string>
    <string name="hint_etLogin">login</string>
    <string name="hint_etPassword">*******</string>
    <string name="hint_etLoginEmail">email</string>
    <string name="hint_etLoginPassword">password</string>
    <string name="text_toRegister">Back to register page</string>
    <string name="enter_btnEnter">   E N T E R   </string>
    <string name="hint_toEnter">Already have an account?</string>
    <string name="hint_btnRegister">R E G I S T E R</string>
    <string name="text_build_tools">Build tools</string>
    <string name="text_tanusha">Tatyana Shkolnik</string>
    <string name="text_ilysha">Ilya Bregman</string>
    <string name="text_current_version">Current Version</string>
    <string name="text_label_notes">Notes</string>
    <string name="text_label_passwords">Passwords</string>
    <string name="text_label_documents">Documents</string>
    <string name="text_label_diary">Diary</string>
    <string name="text_label_profil">Profil</string>
    <string name="text_label_about">About</string>
    <string name="text_title_Mode">"Dark Theme"</string>
    <string name="text_title_Language">"Language"</string>
    <string name="text_title_Appearance">Appearance</string>
    <string name="card_note_title">Your title</string>
    <string name="card_note_description">Your description</string>
    <string name="specify_deleting">Are you sure to delete this note?</string>
    <string name="choose_priority">Сhoose priority</string>
    <string name="send_change"><![CDATA[s e n d _ c h a n g e s]]></string>
    <string name="l_o_g_o_u_t">L o g o u t</string>
    <string name="tools">Tools</string>
    <string name="tsib_team">TSIB team</string>
    <string name="ilya_bregman">Ilya Bregman</string>
    <string name="tatyana_shkolnik">Tatyana Shkolnik</string>
    <string name="site_tsibteam">https://tsibteam.github.io/</string>

</resources>

