<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/notes">

    <fragment
        android:id="@+id/notes"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.notes.NotesFragment"
        android:label="@string/text_label_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/passwords"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.passwords.PasswordFragment"
        android:label="@string/text_label_passwords"
        tools:layout="@layout/fragment_password" />
    <fragment
        android:id="@+id/profile"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.ProfileFragment"
        android:label="@string/text_label_profil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/diary"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.DiaryFragment"
        android:label="@string/text_label_diary"
        tools:layout="@layout/fragment_diary" />
    <fragment
        android:id="@+id/settings"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.SettingsFragment"
        android:label="@string/title_activity_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/about"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.AboutFragment"
        android:label="@string/text_label_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/documents"
        android:name="com.tatyanashkolnik.studentassistantkotlin.main.documents.DocumentsFragment"
        android:label="@string/text_label_documents"
        tools:layout="@layout/fragment_documents" />
</navigation>